dev/test_programs/INVALID/group13/invalid_breakcontinue.go
package main

func main() {
	break
	continue
}